# SymmetricStrength

./: CMakeLists.txt  README.md
headers/: header.h
src/: Main.cpp
